# computer_id

./: .gitignore  CPP_LIBRARIES.md  HTTPS_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SECURITY_GUIDE.md  computer_id.sln
computer_id/: computer_id.cpp  computer_id.vcxproj  computer_id.vcxproj.filters  http_client_cpp.cpp  http_client_cpp.h  license_generator.h  secure_transport.cpp  secure_transport.h  secure_transport_cpp.cpp  secure_transport_cpp.h  win_product.cpp  win_product.h
examples/: cpp_license_example.cpp  qt_license_client.cpp  qt_license_client.h  qt_secure_license_client.cpp  qt_secure_license_client.h
qt_hybrid/: BUILD_FIXES.md  CMAKE_CONFIG.md  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  POWERSHELL_FIX.md  README.md  copy_dlls.bat  license_backend.cpp  license_backend.h  license_main_window.cpp  license_main_window.h  license_manager.pro  main.cpp
server/: DEPLOYMENT.md  Dockerfile  QUICKSTART.md  deploy.bat  deploy.sh  docker-compose.yml  license_server.py  requirements.txt  secure_license_server.py  start_server.bat  start_server.sh  test_api.py  test_server.py
